# gitre

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMMANDS.md  LICENSE  README.md  gitre.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
.gitre/: analysis.json
gitre/: __init__.py  analyzer.py  cache.py  cli.py  formatter.py  generator.py  labeler.py  models.py  rewriter.py
installers/windows/: gitre.iss
tests/: conftest.py  test_analyzer.py  test_cache.py  test_cli.py  test_formatter.py  test_generator.py  test_labeler.py  test_models.py  test_rewriter.py
