[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitre"
version = "0.1.0"
description = "AI-powered Git assistant for intelligent repository management"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "gitre contributors" },
]
keywords = ["git", "ai", "cli", "assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "typer[all]>=0.9.0",
    "pydantic>=2.0.0",
    "claude-agent-sdk>=0.1.30",
    "git-filter-repo>=2.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
gitre = "gitre.cli:app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
